OldArchive/c4b822e5119bcceb3169445c23277388-7063104e283ed82d51a6fde7370c6e59/output
+ g++-4.8 -std=c++11 -O2 -Wall -pthread main.cpp
main.cpp: In instantiation of 'void call(F&&) [with F = Foo]':
main.cpp:15:15:   required from here
main.cpp:10:23: error: passing 'Foo' as 'this' argument of 'void Foo::operator()() const &&' discards qualifiers [-fpermissive]
     (std::forward<F>(f))();
                       ^
